Fix readability issues

--- a/SC-HyperDark.user.css
+++ b/SC-HyperDark.user.css
@@ -264,7 +264,7 @@
         margin-left: 15px;
         margin-right: 15px
     }
-    #app:not(body[marginwidth="0"][marginheight="0"] #app),
+    /* #app:not(body[marginwidth="0"][marginheight="0"] #app), */
     #app header:not(.g-flex-row-spread) {
         height: calc(100vh - 90px)
     }
@@ -711,7 +711,7 @@
         bottom: 16px;
         /*bottom: 45px;
         left: 87%;*/
-        filter: drop-shadow(2px 6px 12px #0006);
+        filter: drop-shadow(2px 6px 12px #000);
     }
     /*#app .l-container #content .l-user-hero .profileHeader .profileHeaderInfo__content h2, */#app .l-container #content .l-user-hero .profileHeader .profileHeaderInfo__content .profileHeaderInfo__userName {
         margin-top: 0px;
@@ -1683,7 +1683,7 @@
     .userNetwork {
         margin: 40px 15px 15px
     }
-    .l-fixed-top-one-column > .l-top {
+    .sc-classic .l-fixed-top-one-column > .l-top {
         background: #111;
         top: 0;
         width: calc(100% - 235px)
